--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,8 @@
     margin-bottom: auto !important; }
 
   .badge {
-    width: 100px !important;
+    font-size: 1.2rem !important;
+    width: 150px !important;
     margin-left: auto !important;
     margin-right: auto !important;
     margin-bottom: 10px !important; }
@@ -57,7 +58,7 @@
 
   body {
     width: 100%;
-    padding-bottom: 30px !important;
+    padding-bottom: 50px !important;
     background-image: url("../images/bg.jpg") !important;
     background-size: cover;
     background-repeat: no-repeat; } }
@@ -370,6 +371,7 @@ h5, .sample-text, .description {
   text-shadow: 1px 0px 2px white, -1px 0px 2px white, 0px 1px 2px white, 0px -1px 2px white, 1px 0px 3px white, -1px 0px 3px white, 0px 1px 3px white, 0px -1px 3px white; }
 
 .sample-text {
+  font-size: 1.5rem;
   margin-bottom: 3rem; }
 
 body {
@@ -384,9 +386,9 @@ body {
   margin-top: 8rem; }
 
 .badge {
+  font-size: 12px;
   background-color: blue;
   width: 30%;
-  height: 20px;
   box-shadow: 0 4px 2px rgba(12, 62, 102, 0.623);
   transition: transform .3s, box-shadow .1s;
   cursor: pointer; }
@@ -395,6 +397,7 @@ body {
     box-shadow: 0 9px 4px rgba(12, 62, 102, 0.623); }
 
 .description {
+  font-size: 1.25rem;
   margin-top: 15px !important; }
 
 .github {
@@ -426,7 +429,8 @@ body {
 .photo-cube {
   width: 220px;
   height: 220px;
-  transform-style: preserve-3d; }
+  transform-style: preserve-3d;
+  transform: rotateX(-15deg) rotateY(-15deg); }
 
 .cube-side {
   width: inherit;
