--- a/scss/body/_body.scss
+++ b/scss/body/_body.scss
@@ -4,6 +4,7 @@ h5, .sample-text, .description {
 }
 
 .sample-text {
+    font-size: 1.5rem;
     margin-bottom: 3rem;
 }
 
@@ -21,9 +22,9 @@ body {
 }
 
 .badge {
+    font-size: 12px;
     background-color: blue;
     width: 30%;
-    height: 20px;
     box-shadow: 0 4px 2px rgba(12, 62, 102, 0.623);
     transition: transform .3s, box-shadow .1s;
     cursor: pointer;
@@ -34,5 +35,6 @@ body {
 }
 
 .description {
+    font-size: 1.25rem;
     margin-top: 15px !important;
 }
