--- a/scss/universal/_media-queries.scss
+++ b/scss/universal/_media-queries.scss
@@ -61,7 +61,8 @@
     }
 
     .badge {
-        width: 100px !important;
+        font-size: 1.2rem !important;
+        width: 150px !important;
         margin-left: auto !important;
         margin-right: auto !important;
         margin-bottom: 10px !important;
@@ -73,7 +74,7 @@
 
     body {
         width: 100%;
-        padding-bottom: 30px !important;
+        padding-bottom: 50px !important;
         background-image: url("../images/bg.jpg") !important;
         background-size:cover;
         background-repeat: no-repeat;
