--- a/css/styles.css
+++ b/css/styles.css
@@ -2,15 +2,6 @@
   h5 {
     width: 690px; }
 
-  .bp-social {
-    padding-left: 30px !important;
-    padding-right: 30px !important;
-    position: relative;
-    top: 135px;
-    width: 54px !important;
-    justify-content: center !important;
-    border-radius: 5%; }
-
   .bp-github {
     margin: 0 !important; }
 
@@ -31,7 +22,8 @@
   .bp {
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: repeat(2, 1fr); }
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 75px !important; }
     .bp-md {
       display: flex;
       flex-direction: column;
@@ -58,10 +50,23 @@
 
   body {
     width: 100%;
-    padding-bottom: 150px !important;
     background-image: url("../images/bg.jpg") !important;
     background-size: cover;
-    background-repeat: no-repeat; } }
+    background-repeat: no-repeat; }
+
+  .footer-heading {
+    text-align: center !important;
+    margin-bottom: 1.5rem !important; }
+
+  .bp-social {
+    justify-content: center !important; }
+
+  .contact {
+    text-align: center !important; }
+
+  .footer-grid {
+    display: grid !important;
+    grid-template-rows: 1fr; } }
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -367,23 +372,26 @@ template {
 [hidden] {
   display: none; }
 
-h5, .sample-text, .description {
+h5, .sample-text, .description, .contact {
   text-shadow: 1px 0px 2px white, -1px 0px 2px white, 0px 1px 2px white, 0px -1px 2px white, 1px 0px 3px white, -1px 0px 3px white, 0px 1px 3px white, 0px -1px 3px white; }
 
+h5 {
+  font-weight: bold; }
+
 .sample-text {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   margin-bottom: 3rem; }
 
 body {
   width: 100%;
-  padding-bottom: 150px;
+  padding-bottom: 20px;
   background-image: url("../images/bg-320.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-color: white; }
 
 .cube-control {
-  margin-top: 8rem; }
+  margin-top: 6rem; }
 
 .badge {
   font-size: 12px;
@@ -399,6 +407,22 @@ body {
 .description {
   font-size: 1.25rem;
   margin-top: 15px !important; }
+
+.footer {
+  width: 100%;
+  height: 100%; }
+
+.footer-heading {
+  font-size: 1.5rem;
+  font-weight: bold;
+  width: 100%; }
+
+.contact {
+  font-size: 1.2rem; }
+
+.bp-social {
+  padding-right: 0;
+  padding-left: 0; }
 
 .github {
   padding: 2px;
