--- a/scss/universal/_media-queries.scss
+++ b/scss/universal/_media-queries.scss
@@ -3,25 +3,15 @@
         width: 690px; 
     }
 
-    .bp-social {
-        padding-left: 30px !important;
-        padding-right: 30px !important;
-        position: relative;
-        top: 135px;
-        width: 54px !important;
-        justify-content: center !important;
-        border-radius: 5%;
-    }
-
     .bp-github {
         margin: 0 !important;
     }
 
-    .github {
+    .github, .treehouse {
         margin-left: 5px !important;
     }
 
-    .linkedin {
+    .linkedin, .github {
         margin-right: 5px !important;
     }
 
@@ -39,6 +29,7 @@
         display: grid;
         grid-template-rows: 1fr;
         grid-template-columns: repeat(2, 1fr);
+        margin-bottom: 75px !important;
         &-md {
             display: flex;
             flex-direction: column;
@@ -74,9 +65,26 @@
 
     body {
         width: 100%;
-        padding-bottom: 150px !important;
         background-image: url("../images/bg.jpg") !important;
         background-size:cover;
         background-repeat: no-repeat;
+    }
+
+    .footer-heading {
+        text-align: center !important;
+        margin-bottom: 1.5rem !important;
+    }
+
+    .bp-social {
+        justify-content: center !important;
+    }
+
+    .contact {
+        text-align: center !important;
+    }
+
+    .footer-grid {
+        display: grid !important;
+        grid-template-rows: 1fr;
     }
 }
