changed to only include resume

--- a/scss/body/_body.scss
+++ b/scss/body/_body.scss
@@ -1,113 +1,316 @@
-h5, .sample-text, .description, .contact {
-    text-shadow: 1px 0px 2px white, -1px 0px 2px white, 0px 1px 2px white, 0px -1px 2px white,
-    1px 0px 3px white, -1px 0px 3px white, 0px 1px 3px white, 0px -1px 3px white;
-}
+/* Global Layout Set-up */
+* { 
+    box-sizing: border-box;
+  }
+    
+  body:not(.work-experience h2) {
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    font-family: 'Roboto', sans-serif;
+    background: #f7f5f0;
+  }
+  /* Link Styles */
+  
+  a {
+    text-decoration: none;
+    color: #999;
+  }
+  a:hover {
+    color: #6633ff;
+  }
+  
+  /* Section Styles */
+  
+  .main-nav {
+    background: black;
+    min-height: 30px;
+    padding: 10px;
+    position: fixed;
+    text-align: center;
+  }
+  .nav {
+    display: flex;
+    justify-content: space-around;
+    font-weight: 700;
+    list-style-type: none;
+    margin: 0 auto;
+    padding: 0;
+  }
+  
+  .nav .name {
+      display: block;
+      margin-right: auto;
+      color: white;
+  }
+  .nav li {
+    padding: 5px 10px 10px 10px;
+  }
+  .nav a {
+    transition: all .5s;
+  }
+  .nav a:hover {
+    color: red;
+  }
+  
 
-h5 {
-    font-weight: bold;
-}
 
-.sample-text {
-    font-size: 1.2rem;
-    margin-bottom: 3rem;
-}
+  .header-home {
+    background: url('../images/header.jpg') no-repeat top center ;
+    background-size: cover;
+  }
+  
+  .header-experience {
+    background: url('../images/tech-image.jpg') no-repeat top center ;
+    background-size: cover;
+  }
+  
+  .header-hobbies {
+    background: url('../images/hobby-background.jpg') no-repeat top center ;
+    background-size: cover;
+  }
+  
+  header {
+    text-align: center;
+    overflow: hidden;
+    padding-top: 60px;
+  }
+  header {
+    line-height: 1.5;
+  }
 
-body {
-    width: 100%;
-    padding-bottom: 20px;
-    background-image: url("../images/bg-320-test.jpg");
-    background-size:cover;
-    background-repeat: no-repeat;
-    background-color: white;
-}
-
-.cube-control {
-    margin-top: 6rem;
-}
-
-.badge {
-    font-size: 12px;
-    background-color: blue;
-    width: 30%;
-    box-shadow: 0 4px 2px rgba(12, 62, 102, 0.623);
-    transition: transform .3s, box-shadow .1s;
-    cursor: pointer;
-}
-
-.badge:hover {
-box-shadow: 0 9px 4px rgba(12, 62, 102, 0.623);
-}
-.badge:hover, .linkedin:hover, .treehouse:hover, .github:hover {
-    transform: scale(1.2);
-    }
-
-.badge:focus, .bp-github:focus, .bp-linkedin:focus {
-    transform: scale(1.2);
-    }
-
-.github, .treehouse {
-    margin-left: 5px !important;
-}
-
-.linkedin, .github {
-    margin-right: 5px !important;
-}
-
-.description {
-    font-size: 1.25rem;
-    margin-top: 15px !important;
-}
-
-.footer {
-    width: 100%;
-    height: 100%;
-}
-
-.footer-heading {
-    font-size: 1.5rem;
-    font-weight: bold;
-    width: 100%;
-}
-
-.contact {
-    font-size: 1.2rem;
-}
-
-.bp-social {
-    padding-right: 0;
-    padding-left: 0;
-}
-
-.github {
-    border: 1px solid rgb(93, 42, 93);
+  header .profile-image {
+    margin-top: 50px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
-    background-color: rgb(93, 42, 93);
-    &-path{
-        fill: white;
+    border: 3px solid blue;
+    transition: all .5s;
+  }
+  header .profile-image:hover {
+    transform: scale(1.5) rotate(-360deg);
+    border: 3px solid red;
+  }
+
+  .resume-image {
+    margin-top: 50px;
+    margin-left: auto;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 3px solid blue;
+    transition: all .5s;
+    &:hover {
+    transform: scale(1.5) rotate(-360deg);
+    border: 3px solid red;
     }
-}
+  }
 
-.treehouse, .github {
-    padding: 2px;
-}
-
-.linkedin {
-    background-color: white;
-    border: 1px solid white;
+  .tag {
+    background-color: #efefef;
+    color: black;
+    padding: 10px;
     border-radius: 5px;
-}
+    display: table;
+    margin: 10px auto;
+  } 
 
-.treehouse {
-    border: 2px solid rgb(44, 207, 99);
-    background-color: rgb(4, 102, 36);;
+  .location {
+    background-color: rgb(255, 255, 255);
+    color: rgb(2, 2, 2);
+    text-align: center;
+  }
+  
+  .card-background {
+    margin: 30px;
+    padding: 20px 40px 40px;
+    max-width: 500px;
+    max-height: fit-content;
+    text-align: center;
+    background: rgb(139, 157, 241);
+    border-bottom: 4px solid #ccc;
+    border-radius: 6px;
+    transition: all .5s;
+    align-content: center;
+  }
+  
+  .card-goals {
+    margin: 30px;
+    padding: 20px 40px 40px;
+    max-width: 500px;
+    text-align: center;
+    background: rgb(139, 157, 241);
+    border-bottom: 4px solid #ccc;
+    border-radius: 6px;
+    transition: all .5s;
+  }
+  
+  .card-tinkering {
+    margin: 30px;
+    padding: 20px 40px 40px;
+    max-width: 500px;
+    max-height: fit-content;
+    text-align: center;
+    background: rgb(139, 157, 241);
+    border-bottom: 4px solid #ccc;
+    border-radius: 6px;
+    transition: all .5s;
+  }
+  
+  .card-background:hover {
+    border-color: green;
+  }
+  
+  .card-goals:hover {
+    border-color: green;
+  }
+  
+  .card-tinkering:hover {
+    border-color: green;
+  }
+  
+  ul.skills {
+    padding: 0;
+    text-align: center;
+  }
+  
+  .skills li {
+    border-radius: 6px;
+    display: inline-block;
+    background: #ffffff;
+    color: rgb(139, 157, 241);
+    padding: 5px 10px;
+    margin: 2px;
+  }
+  
+  .skills li:nth-child(odd) {
+    background: #ffffff;
+  }
+  
+  .no-bullets {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .my-computer {
+    width: 175px;
+    height: 200px;
+    border-radius: 50%; 
+    align-content: center;
+    border: 3px solid white;
+    margin: 10px;
+  }
+  
+  .my-computer:hover {
+    transform: scale(2.0)
+  }
+  
+  .car {
+    width: 200px;
+    height: 150px;
     border-radius: 50%;
-}
+    border: 3px solid white;
+    margin: 10px;
+  }
+  
+  .car:hover {
+    transform: scale(2.0);
+  }
+  
+  footer {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    min-height: 30px;
+    padding: 20px 0 40px 0px;
+  }
 
-.linkedin-path {
-    fill: rgb(9, 55, 204);
-}
-
-.linkedin, .github, .treehouse {
+  .footer-links {
+    margin-left: auto;
+    margin-right: auto;
+    & a {
+      margin-left: auto !important;
+      margin-right: auto;
+      margin-top: 10px;
+    }
+  }
+  
+  footer .copyright {
+    top: -8px;
+    font-size: .75em;
+  }
+  
+  footer ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  footer ul li {
+    display: inline-block;
+  }
+  
+  a.social {
+    display: inline-block;
+    text-indent: -9999px;
+    margin-top: 10px;
     width: 30px;
     height: 30px;
-}
+    background-size: 30px 30px;
+    opacity: .4;
+    transition: all .5s;
+  }
+  a.twitter {
+    background-image: url(../images/twitter.svg);
+  }
+  a.linkedin {
+    background-image: url(../images/linkedin.svg);
+  }
+  a.github {
+    background-image: url(../images/github.svg);
+  }
+  a.social:hover {
+    opacity: 1;
+  }
+  .clearfix {
+    clear: both;
+  }
+  
+  /* Styles for larger screens */
+  @media screen and (min-width: 720px) {
+    
+    .flex {
+        display: -ms-flexbox;      /* TWEENER - IE 10 */
+        display: flex; 
+        max-width: 1200px;
+        -ms-flex-pack: distribute;
+        justify-content: space-around;
+        margin: 0 auto;
+    }
+  
+    .header-experience, .header-hobbies, .header-home {
+      min-height: 470px;
+    }
+  
+    .nav {
+      max-width: 1200px;
+      padding: 0 30px;
+    }
+  
+  
+    main {
+      padding-top: 20px;
+    }
+  
+    main p {
+      line-height: 1.6em;
+    }
+  
+    footer {
+      font-size: 1.3em;
+      max-width: 1200px;
+      margin: 40px auto;
+    }
+  
+  }
