--- a/css/styles.css
+++ b/css/styles.css
@@ -303,208 +303,398 @@ template {
 [hidden] {
   display: none; }
 
-@media (min-width: 768px) {
-  h5 {
-    width: 690px; }
+/* Global Layout Set-up */
+* {
+  box-sizing: border-box; }
 
-  .bp-github {
-    margin: 0 !important; }
+body:not(.work-experience h2) {
+  margin: 0;
+  padding: 0;
+  text-align: left;
+  font-family: 'Roboto', sans-serif;
+  background: #f7f5f0; }
 
-  .github, .treehouse {
-    margin-left: 5px !important; }
+/* Link Styles */
+a {
+  text-decoration: none;
+  color: #999; }
 
-  .linkedin, .github {
-    margin-right: 5px !important; }
+a:hover {
+  color: #6633ff; }
 
-  .linkedin, .github {
-    width: 36px;
-    height: 36px;
-    margin-bottom: 2px !important; }
+/* Section Styles */
+.main-nav {
+  background: black;
+  min-height: 30px;
+  padding: 10px;
+  position: fixed;
+  text-align: center; }
 
-  .sample-text {
-    margin-top: 100px !important; }
+.nav {
+  display: flex;
+  justify-content: space-around;
+  font-weight: 700;
+  list-style-type: none;
+  margin: 0 auto;
+  padding: 0; }
 
-  .bp {
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: repeat(2, 1fr);
-    margin-bottom: 75px !important; }
-    .bp-md {
-      display: flex;
-      flex-direction: column;
-      margin: 0 !important; }
+.nav .name {
+  display: block;
+  margin-right: auto;
+  color: white; }
 
-  .row.bp-md {
+.nav li {
+  padding: 5px 10px 10px 10px; }
+
+.nav a {
+  transition: all .5s; }
+
+.nav a:hover {
+  color: red; }
+
+.header-home {
+  background: url("../images/header.jpg") no-repeat top center;
+  background-size: cover; }
+
+.header-experience {
+  background: url("../images/tech-image.jpg") no-repeat top center;
+  background-size: cover; }
+
+.header-hobbies {
+  background: url("../images/hobby-background.jpg") no-repeat top center;
+  background-size: cover; }
+
+header {
+  text-align: center;
+  overflow: hidden;
+  padding-top: 60px; }
+
+header {
+  line-height: 1.5; }
+
+header .profile-image {
+  margin-top: 50px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 3px solid blue;
+  transition: all .5s; }
+
+header .profile-image:hover {
+  transform: scale(1.5) rotate(-360deg);
+  border: 3px solid red; }
+
+.resume-image {
+  margin-top: 50px;
+  margin-left: auto;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 3px solid blue;
+  transition: all .5s; }
+  .resume-image:hover {
+    transform: scale(1.5) rotate(-360deg);
+    border: 3px solid red; }
+
+.tag {
+  background-color: #efefef;
+  color: black;
+  padding: 10px;
+  border-radius: 5px;
+  display: table;
+  margin: 10px auto; }
+
+.location {
+  background-color: white;
+  color: #020202;
+  text-align: center; }
+
+.card-background {
+  margin: 30px;
+  padding: 20px 40px 40px;
+  max-width: 500px;
+  max-height: fit-content;
+  text-align: center;
+  background: #8b9df1;
+  border-bottom: 4px solid #ccc;
+  border-radius: 6px;
+  transition: all .5s;
+  align-content: center; }
+
+.card-goals {
+  margin: 30px;
+  padding: 20px 40px 40px;
+  max-width: 500px;
+  text-align: center;
+  background: #8b9df1;
+  border-bottom: 4px solid #ccc;
+  border-radius: 6px;
+  transition: all .5s; }
+
+.card-tinkering {
+  margin: 30px;
+  padding: 20px 40px 40px;
+  max-width: 500px;
+  max-height: fit-content;
+  text-align: center;
+  background: #8b9df1;
+  border-bottom: 4px solid #ccc;
+  border-radius: 6px;
+  transition: all .5s; }
+
+.card-background:hover {
+  border-color: green; }
+
+.card-goals:hover {
+  border-color: green; }
+
+.card-tinkering:hover {
+  border-color: green; }
+
+ul.skills {
+  padding: 0;
+  text-align: center; }
+
+.skills li {
+  border-radius: 6px;
+  display: inline-block;
+  background: #ffffff;
+  color: #8b9df1;
+  padding: 5px 10px;
+  margin: 2px; }
+
+.skills li:nth-child(odd) {
+  background: #ffffff; }
+
+.no-bullets {
+  list-style-type: none;
+  padding: 0;
+  margin: 0; }
+
+.my-computer {
+  width: 175px;
+  height: 200px;
+  border-radius: 50%;
+  align-content: center;
+  border: 3px solid white;
+  margin: 10px; }
+
+.my-computer:hover {
+  transform: scale(2); }
+
+.car {
+  width: 200px;
+  height: 150px;
+  border-radius: 50%;
+  border: 3px solid white;
+  margin: 10px; }
+
+.car:hover {
+  transform: scale(2); }
+
+footer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 30px;
+  padding: 20px 0 40px 0px; }
+
+.footer-links {
+  margin-left: auto;
+  margin-right: auto; }
+  .footer-links a {
     margin-left: auto !important;
-    margin-right: auto !important; }
+    margin-right: auto;
+    margin-top: 10px; }
 
-  .cntrl-1 {
-    margin-top: auto !important; }
-  .cntrl-2 {
-    margin-bottom: auto !important; }
+footer .copyright {
+  top: -8px;
+  font-size: .75em; }
 
-  .badge {
-    font-size: 1.2rem !important;
-    width: 150px !important;
-    margin-left: auto !important;
-    margin-right: auto !important;
-    margin-bottom: 10px !important; }
+footer ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0; }
 
-  .bp-cube {
-    margin-top: 20px !important; }
+footer ul li {
+  display: inline-block; }
 
-  body {
-    width: 100%;
-    background-image: url("../images/bg-768-test.jpg") !important;
-    background-size: cover;
-    background-repeat: no-repeat; }
+a.social {
+  display: inline-block;
+  text-indent: -9999px;
+  margin-top: 10px;
+  width: 30px;
+  height: 30px;
+  background-size: 30px 30px;
+  opacity: .4;
+  transition: all .5s; }
 
-  .footer-heading {
-    text-align: center !important;
-    margin-bottom: 1.5rem !important; }
+a.twitter {
+  background-image: url(../images/twitter.svg); }
 
-  .bp-social {
-    justify-content: center !important; }
+a.linkedin {
+  background-image: url(../images/linkedin.svg); }
 
-  .contact {
-    text-align: center !important; }
+a.github {
+  background-image: url(../images/github.svg); }
 
-  .footer-grid {
-    display: grid !important;
-    grid-template-rows: 1fr; } }
-h5, .sample-text, .description, .contact {
-  text-shadow: 1px 0px 2px white, -1px 0px 2px white, 0px 1px 2px white, 0px -1px 2px white, 1px 0px 3px white, -1px 0px 3px white, 0px 1px 3px white, 0px -1px 3px white; }
+a.social:hover {
+  opacity: 1; }
 
-h5 {
-  font-weight: bold; }
+.clearfix {
+  clear: both; }
 
-.sample-text {
-  font-size: 1.2rem;
-  margin-bottom: 3rem; }
+/* Styles for larger screens */
+@media screen and (min-width: 720px) {
+  .flex {
+    display: -ms-flexbox;
+    /* TWEENER - IE 10 */
+    display: flex;
+    max-width: 1200px;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    margin: 0 auto; }
 
+  .header-experience, .header-hobbies, .header-home {
+    min-height: 470px; }
+
+  .nav {
+    max-width: 1200px;
+    padding: 0 30px; }
+
+  main {
+    padding-top: 20px; }
+
+  main p {
+    line-height: 1.6em; }
+
+  footer {
+    font-size: 1.3em;
+    max-width: 1200px;
+    margin: 40px auto; } }
 body {
-  width: 100%;
-  padding-bottom: 20px;
-  background-image: url("../images/bg-320-test.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-color: white; }
+  width: fit-content; }
 
-.cube-control {
-  margin-top: 6rem; }
+.resume-grid, .personal-summary p, .inner-job, .bulleted, .by-line p {
+  margin-left: 10px; }
 
-.badge {
-  font-size: 12px;
-  background-color: blue;
-  width: 30%;
-  box-shadow: 0 4px 2px rgba(12, 62, 102, 0.623);
-  transition: transform .3s, box-shadow .1s;
-  cursor: pointer; }
+.resume-grid, .personal-summary p, .inner-job {
+  margin-right: 10px; }
 
-.badge:hover {
-  box-shadow: 0 9px 4px rgba(12, 62, 102, 0.623); }
+.personal-summary p, .job h3, .iaes h2, .contact h2, .personal-summary h2, .work-experience-heading, .resume-skills {
+  text-align: left !important; }
 
-.badge:hover, .linkedin:hover, .treehouse:hover, .github:hover {
-  transform: scale(1.2); }
+.comp-date, .job {
+  display: flex; }
 
-.badge:focus, .bp-github:focus, .bp-linkedin:focus {
-  transform: scale(1.2); }
+.contact div {
+  display: block; }
 
-.github, .treehouse {
-  margin-left: 5px !important; }
+.resume-grid {
+  border: 1px solid black; }
+  .resume-grid h2 {
+    background-color: gray;
+    margin-left: auto;
+    margin-right: auto; }
 
-.linkedin, .github {
-  margin-right: 5px !important; }
+.resume-title {
+  margin-top: 50px; }
 
-.description {
-  font-size: 1.25rem;
-  margin-top: 15px !important; }
+.work-experience {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-areas: "schwab" "swift" "rgis" "sch" "c2c"; }
 
-.footer {
-  width: 100%;
-  height: 100%; }
+.comp-date {
+  justify-content: space-between; }
 
-.footer-heading {
-  font-size: 1.5rem;
-  font-weight: bold;
+.c2c {
+  grid-area: c2c;
+  border-top: none !important; }
+
+.sch {
+  grid-area: sch; }
+
+.rgis {
+  grid-area: rgis; }
+
+.swift {
+  grid-area: swift; }
+
+.schwab {
+  grid-area: schwab; }
+
+.job {
+  border-bottom: 1px solid black; }
+
+.inner-job, .main-nav, footer {
   width: 100%; }
 
-.contact {
-  font-size: 1.2rem; }
+footer p {
+  text-align: center; }
 
-.bp-social {
-  padding-right: 0;
-  padding-left: 0; }
+.job h3, .iaes h2, .contact h2, .personal-summary h2, .work-experience-heading, .resume-download {
+  color: blue !important; }
 
-.github {
-  border: 1px solid #5d2a5d;
-  border-radius: 50%;
-  background-color: #5d2a5d; }
-  .github-path {
-    fill: white; }
+.contact h2, .personal-summary h2, .work-experience-heading, .iaes h2 {
+  padding-left: 10px !important; }
 
-.treehouse, .github {
-  padding: 2px; }
+.iaes-grid .bulleted li, .resume-download {
+  margin-top: 10px; }
 
-.linkedin {
-  background-color: white;
-  border: 1px solid white;
-  border-radius: 5px; }
+.bulleted {
+  padding-left: 20px; }
 
-.treehouse {
-  border: 2px solid #2ccf63;
-  background-color: #046624;
-  border-radius: 50%; }
+.inner-job .ul-break {
+  display: block; }
 
-.linkedin-path {
-  fill: #0937cc; }
+.bulleted {
+  list-style: disc; }
 
-.linkedin, .github, .treehouse {
-  width: 30px;
-  height: 30px; }
+.resume-download, .bulleted li {
+  margin-bottom: 10px; }
 
-.cube-container {
-  width: 220px;
-  height: 220px;
-  perspective: 800px;
-  margin-top: 1.5rem; }
+.contact div {
+  justify-content: space-around; }
 
-.photo-cube {
-  width: 220px;
-  height: 220px;
-  transform-style: preserve-3d;
-  transform: rotateX(-15deg) rotateY(-15deg); }
+.contact p, .job h3, .iaes h2, .contact h2, .personal-summary h2, .work-experience-heading {
+  margin-top: 5px;
+  margin-bottom: 5px; }
 
-.cube-side {
-  width: inherit;
-  height: inherit;
-  display: block;
-  position: absolute;
-  border: 2px solid #1b1a1a;
-  border-radius: 5px;
-  box-shadow: 0 0 25px rgba(36, 36, 36, 0.781);
-  cursor: pointer; }
+.by-line p {
+  margin-top: 0px;
+  margin-bottom: 0px; }
 
-.front {
-  transform: translate3d(0, 0, 90px); }
+.cert {
+  margin: 5px; }
 
-.back {
-  transform: translate3d(0, 0, -130px) rotateY(180deg); }
+@media screen and (min-width: 700px) {
+  .contact div {
+    display: flex;
+    margin-right: 0px; }
 
-.left {
-  transform: translate3d(-220px, 0, 90px) rotateY(270deg);
-  transform-origin: top right; }
+  .ul-break {
+    justify-content: space-around; }
 
-.right {
-  transform: translate3d(220px, -1px, 90px) rotateY(90deg);
-  transform-origin: center left; }
+  .ul-skills {
+    margin: 15px !important;
+    list-style-type: none; }
 
-.top {
-  transform: translate3d(0, -110px, -20px) rotateX(90deg);
-  transform-origin: center left; }
+  nav .ul-break div, .ul-break {
+    display: flex !important; }
 
-.bottom {
-  transform: translate3d(0, 110px, -20px) rotateX(-90deg);
-  transform-origin: center left; }
+  .center-text {
+    text-align: center; }
+
+  .flex {
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: row; }
+
+  .cert {
+    margin: 3px;
+    width: 200px;
+    height: 200px; } }
 
 /*# sourceMappingURL=styles.css.map */
