--- a/css/styles.css
+++ b/css/styles.css
@@ -352,37 +352,9 @@ a:hover {
 .nav a:hover {
   color: red; }
 
-.header-home {
-  background: url("../images/header.jpg") no-repeat top center;
-  background-size: cover; }
-
-.header-experience {
-  background: url("../images/tech-image.jpg") no-repeat top center;
-  background-size: cover; }
-
-.header-hobbies {
-  background: url("../images/hobby-background.jpg") no-repeat top center;
-  background-size: cover; }
-
 header {
   text-align: center;
-  overflow: hidden;
-  padding-top: 60px; }
-
-header {
-  line-height: 1.5; }
-
-header .profile-image {
-  margin-top: 50px;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  border: 3px solid blue;
-  transition: all .5s; }
-
-header .profile-image:hover {
-  transform: scale(1.5) rotate(-360deg);
-  border: 3px solid red; }
+  overflow: hidden; }
 
 .resume-image {
   margin-top: 50px;
@@ -396,30 +368,10 @@ header .profile-image:hover {
     transform: scale(1.5) rotate(-360deg);
     border: 3px solid red; }
 
-.tag {
-  background-color: #efefef;
-  color: black;
-  padding: 10px;
-  border-radius: 5px;
-  display: table;
-  margin: 10px auto; }
-
 .location {
   background-color: white;
   color: #020202;
   text-align: center; }
-
-.card-background {
-  margin: 30px;
-  padding: 20px 40px 40px;
-  max-width: 500px;
-  max-height: fit-content;
-  text-align: center;
-  background: #8b9df1;
-  border-bottom: 4px solid #ccc;
-  border-radius: 6px;
-  transition: all .5s;
-  align-content: center; }
 
 .card-goals {
   margin: 30px;
@@ -499,6 +451,17 @@ footer {
   min-height: 30px;
   padding: 20px 0 40px 0px; }
 
+.flex {
+  margin-left: auto;
+  margin-right: auto; }
+
+.cert-wrap {
+  display: flex;
+  flex-direction: column; }
+
+.cert {
+  width: 100%; }
+
 .footer-links {
   margin-left: auto;
   margin-right: auto; }
@@ -529,12 +492,6 @@ a.social {
   opacity: .4;
   transition: all .5s; }
 
-a.twitter {
-  background-image: url(../images/twitter.svg); }
-
-a.linkedin {
-  background-image: url(../images/linkedin.svg); }
-
 a.github {
   background-image: url(../images/github.svg); }
 
@@ -550,10 +507,37 @@ a.social:hover {
     display: -ms-flexbox;
     /* TWEENER - IE 10 */
     display: flex;
+    flex-direction: column;
     max-width: 1200px;
     -ms-flex-pack: distribute;
     justify-content: space-around;
     margin: 0 auto; }
+
+  .cert-wrap {
+    display: flex;
+    flex-direction: row;
+    max-width: 800px; }
+
+  .fewd-cert {
+    margin-top: auto !important;
+    margin-bottom: auto !important; }
+
+  .contact div {
+    display: flex;
+    margin-right: 0px; }
+
+  .ul-break {
+    justify-content: space-around; }
+
+  .ul-skills {
+    margin: 15px !important;
+    list-style-type: none; }
+
+  nav .ul-break div, .ul-break {
+    display: flex !important; }
+
+  .center-text {
+    text-align: center; }
 
   .header-experience, .header-hobbies, .header-home {
     min-height: 470px; }
@@ -569,9 +553,7 @@ a.social:hover {
     line-height: 1.6em; }
 
   footer {
-    font-size: 1.3em;
-    max-width: 1200px;
-    margin: 40px auto; } }
+    font-size: 1.3em; } }
 body {
   width: fit-content; }
 
@@ -648,9 +630,6 @@ footer p {
 .inner-job .ul-break {
   display: block; }
 
-.bulleted {
-  list-style: disc; }
-
 .resume-download, .bulleted li {
   margin-bottom: 10px; }
 
@@ -667,34 +646,5 @@ footer p {
 
 .cert {
   margin: 5px; }
-
-@media screen and (min-width: 700px) {
-  .contact div {
-    display: flex;
-    margin-right: 0px; }
-
-  .ul-break {
-    justify-content: space-around; }
-
-  .ul-skills {
-    margin: 15px !important;
-    list-style-type: none; }
-
-  nav .ul-break div, .ul-break {
-    display: flex !important; }
-
-  .center-text {
-    text-align: center; }
-
-  .flex {
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: row; }
-
-  .cert {
-    margin: 3px;
-    width: 200px;
-    height: 200px; } }
 
 /*# sourceMappingURL=styles.css.map */
