--- a/scss/body/_body.scss
+++ b/scss/body/_body.scss
@@ -246,6 +246,8 @@
       display: flex;
       flex-direction: row;
       max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .fewd-cert {
