--- a/scss/body/_resume.scss
+++ b/scss/body/_resume.scss
@@ -109,6 +109,7 @@ footer p {
 
 .contact div {
     justify-content: space-around;
+    margin: 10px;
 }
 
 .contact p, .job h3, .iaes h2, .contact h2, .personal-summary h2, .work-experience-heading {
